version/0.19/_sources/api/solver/_autosummary/settings/partition_surface.rst.txt
:orphan:

.. _partition_surface:

partition_surface
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.partition_surface.partition_surface
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`partition_surface_child <partition_surface_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_5>`       'surfaces' child.

============================   =====================

